--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -203,7 +203,7 @@
                     <div class="row">
                         <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         <div class="input-field col m3 s12">
-                            <input type="text" id="userStructureCity" ng-autocomplete ng-model="structureCity" details="signup.detailsStructureCity" options="optionsStructureCity" ng-change="changeCityName();" ng-blur="resetStructure();" placeholder="" />
+                            <input type="text" id="userStructureCity" ng-autocomplete ng-model="structureCity" details="signup.detailsStructureCity" options="optionsStructureCity" placeholder="" ng-change="resetStructure()" />
                             <label for="userStructureCity">{{'structureSection.label.userStructureCity' | translate }}  <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col m3 s12">
@@ -219,8 +219,9 @@
                             <label>{{'structureSection.label.userStructureName' | translate }} <span class="red-text text-lighten-1">*</span></label>
                        </div>
                         <div class="input-field col s3">
-                            <select name="userStructureSelect" ng-model="structure" id="userStructureSelect" class="browser-default blue-grey-text text-darken-1" ng-focus="loadStructures()"
-                            	ng-options="struct.labelAddress as (struct.label + struct.address) for struct in valuesStructures track by struct._id" ng-focus="resetStructure();" ng-change="applyChangeStructure()" ng-blur="applyChangeStructure()">
+                            <select name="userStructureSelect" ng-model="structure" id="userStructureSelect" class="browser-default blue-grey-text text-darken-1"
+                            	ng-options="struct.labelAddress as (struct.label + struct.address) for struct in valuesStructures track by struct._id" ng-click="applyChangeStructure()">
+                            	<option></option>
                             </select>
                             <input type="hidden" ng-model="structure.referencialId" value="-1" />
                         </div>
