--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -231,7 +231,7 @@
 
                 <!-- championship -->
                 <div class="card" ng-if="currentEvent.link.type=='championship'">
-                    <div class="blue-grey lighten-3 blue-grey-text text-darken-2">
+                    <div class="white blue-grey-text text-darken-2">
                         <h5 class="card-content center blue-grey lighten-1 white-text">
                             <span class="left"><i  class="material-icons">stars</i></span>
                             <span>{{'mainAgenda.eventType.championship' | translate }}</span>
@@ -241,7 +241,7 @@
                         </h5>
                         
                         <h6 class="card-content">{{currentEvent.participants.teamHome.label}} <br/> {{currentEvent.participants.teamVisitor.label}}</h6>
-                        <h6 class="card-content white-text">{{currentEvent.startDate}}</h6>
+                        <h6 class="card-content blue-grey-text text-darken-2">{{currentEvent.startDate}}</h6>
                     </div>                    
                 </div>
                 
