--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -211,6 +211,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="col s12 hide-on-med-and-up"><br/></div>
                 <div class="col s12 m12 l6">
                     <div class="card small red lighten-1 white-text">
                         <div class="card-title center">
@@ -226,7 +227,7 @@
                                 <div class="col s4"><h6>{{'stats.sanction.excluTempo' | translate }}</h6></div>
                                 <div class="col s4"><h6>{{'stats.sanction.redCard' | translate }}</h6></div>
                                 <div class="col s4 amber accent-3"><h5>{{stats['yellowCard'].count}}</h5></div>
-                                <div class="col s4 red lighten-2"><h5>{{stats['exclTmp'].count}}</h5></div>
+                                <div class="col s4 white red-text text-lighten-1"><h5>{{stats['exclTmp'].count}}</h5></div>
                                 <div class="col s4 red darken-3 white-text"><h5>{{stats['redCard'].count}}</h5></div>
                             </div>
                         </div>
