--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -1,6 +1,6 @@
 <div class="container">
 <!-- body start-->
-    <div class="row"> <div class="col s10"></div></div>   
+    <div class="row">&nbsp;</div>   
 
     <!-- view for tablet and phone -->
     <div class="row hide-on-large-only">
@@ -41,15 +41,19 @@
     
     
     <!-- view for desktop -->
-    <div class="row hide-on-med-and-down">
+    <div class="row hide-on-med-and-down blue-grey darken-2">
         <div class="col s1">
-            <a href="#/private/effectiveStats/{{currentEffective._id}}" class="red-text text-lighten-1 center tooltipped" 
+            <br/>
+            <a href="#/private/effectiveStats/{{currentEffective._id}}" class="white-text center tooltipped" 
                data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.viewStatsEffective' | translate }}">
                 <i class="material-icons medium">people</i>
             </a>
         </div>
         <div class="col s5">
-            <div><h5 class="light-green-text text-lighten-1">{{'mainEffective.title' | translate }} {{currentEffective.label}}</h5></div>
+            <div>
+                <br/>
+                <h5 class="white-text">{{'mainEffective.title' | translate }} {{currentEffective.label}}</h5></div>
+                <br/>
         </div>
         
         <!-- effective list -->
@@ -70,14 +74,16 @@
             <p ng-show="effectives.length < 2">&nbsp;</p>
         </div>
         
-        <div class="col s1 right-align">    
-            <a href="#/private/addEffective/{{meta._id}}" class="red-text text-lighten-1 tooltipped" 
+        <div class="col s1 right-align">
+            <br/>
+            <a href="#/private/addEffective/{{meta._id}}" class="white-text tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.addEffective' | translate }}">
                     <i class="fa fa-plus-square-o fa-3x"></i>
             </a>
         </div>
         <div class="col s1 right-align">
-            <a href="#/private/updateEffective/{{currentEffective._id}}" class="red-text text-lighten-1 tooltipped" 
+            <br/>
+            <a href="#/private/updateEffective/{{currentEffective._id}}" class="white-text tooltipped" 
                 data-position="down" data-delay="20" data-tooltip="{{'mainEffective.buttons.updateEffective' | translate }}">
                     <i class="fa fa-pencil-square-o  fa-3x"></i>
             </a>
