--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -91,29 +91,12 @@
                 <div class="col l3 m12 center hide-on-small-only">
                     <avatar person="player" width="'120px'"></avatar>
                 </div>
-                <div class="col l4 m12 s12 white-text center">
+                <div class="col l9 m12 s12 white-text center">
                     <br/>
                     <h4>{{player.firstname}} {{player.name}}</h4>
                     {{player.positionType}}
                 </div>
-                <div class="col l5 m12 s12">
-                    <div class="card light-blue lighten-1 center blue-grey-text text-darken-2">
-                        <div class="card-title">
-                            <span class="white-text"><h5><small>{{'stats.resumeTab.usePlayer' | translate }}</small></h5></span>
-                        </div>
-                        <div class="card-content white">
-                            <div class="row">
-                                <div class="col s4 center"><h6>{{'stats.resumeTab.gamePlayed' | translate }}</h6></div>
-                                <div class="col s4 center"><h6>{{'stats.resumeTab.holder' | translate }}</h6></div>
-                                <div class="col s4 center"><h6>{{'stats.resumeTab.playTime' | translate }}</h6></div>
-
-                                <div class="col s4 light-blue-text text-lighten-1 center"><h6>{{nbGame}}</h6></div>
-                                <div class="col s4 light-blue-text text-lighten-1 center"><h6>{{stats['holder'].count}}</h6></div>
-                                <div class="col s4 light-blue lighten-1 white-text center"><h6>{{stats['playTime'].avg/60 | number : 0}} {{'stats.resumeTab.minute' | translate }}</h6></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="col s12 hide-on-small-only grey lighten-2">
                     <!-- Filter Zone start-->
                         <div class="col s12 center">&nbsp;</div>
@@ -190,7 +173,7 @@
             <!-- Filter Zone end-->
             <div class="row">
                 
-                <div class="col s12 m12 l6">
+                <div class="col s12 m12 l4">
                     <div class="card small light-green lighten-1 blue-grey-text text-darken-2">
                         <div class="card-title grey-text text-lighten-4 center">
                             <span class="white-text"><h5><small>{{'stats.resumeTab.goal' | translate }}</small></h5></span>
@@ -204,31 +187,58 @@
                                 <div class="col s4"><h6>{{'stats.resumeTab.goal' | translate }}</h6></div>
                                 <div class="col s4"><h6>{{'stats.resumeTab.goalAvgLight' | translate }}</h6></div>
                                 <div class="col s4"><h6>{{'stats.resumeTab.frequence' | translate }}</h6></div>
-                                <div class="col s4 light-green darken-2 white-text "><h5>{{stats['goalScored'].count}}</h5></div>
-                                <div class="col s4 light-green darken-1 white-text "><h5>{{stats['goalScored'].count/nbGame | number : 2}}</h5></div>
-                                <div class="col s4 light-green darken-2 white-text "><h5>{{stats['playTime'].sum/60/stats['goalScored'].count | number : 0}} {{'stats.resumeTab.minute' | translate }}</h5></div>
+                                <div class="col s4 light-green darken-2 white-text "><h6>{{stats['goalScored'].count}}</h6></div>
+                                <div class="col s4 light-green darken-1 white-text "><h6>{{stats['goalScored'].count/nbGame | number : 2}}</h6></div>
+                                <div class="col s4 light-green darken-2 white-text "><h6>{{stats['playTime'].sum/60/stats['goalScored'].count | number : 0}} {{'stats.resumeTab.minute' | translate }}</h6></div>
                             </div>
                         </div>
                     </div>
                 </div>
+                
                 <div class="col s12 hide-on-med-and-up"><br/></div>
-                <div class="col s12 m12 l6">
-                    <div class="card small red lighten-1 white-text">
+                
+                <div class="col s12 m12 l4">
+                    <div class="card small light-blue lighten-1 blue-grey-text text-darken-2">
+                        <div class="card-title center">
+                            <span class="white-text"><h5><small>{{'stats.resumeTab.usePlayer' | translate }}</small></h5></span>
+                        </div>
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img src="/assets/images/handball/usePlayer.jpeg">
+                        </div>                        
+                        
+                        <div class="card-content light-blue lighten-3">
+                            <div class="row center">
+                                <div class="col s4 "><h6>{{'stats.resumeTab.gamePlayed' | translate }}</h6></div>
+                                <div class="col s4 "><h6>{{'stats.resumeTab.holder' | translate }}</h6></div>
+                                <div class="col s4 "><h6><small>{{'stats.resumeTab.playTime' | translate }}</small></h6></div>
+                                <div class="col s4 light-blue lighten-1 white-text "><h6>{{nbGame}}</h6></div>
+                                <div class="col s4 light-blue lighten-2 white-text "><h6>{{stats['holder'].count}}</h6></div>
+                                <div class="col s4 light-blue lighten-1 white-text "><h6>{{stats['playTime'].avg/60 | number : 0}} {{'stats.resumeTab.minute' | translate }}</h6></div>
+                            </div>
+                        </div>
+                    </div>        
+                </div>
+                
+                <div class="col s12 hide-on-med-and-up"><br/></div>
+                
+                <div class="col s12 m12 l4">
+                    <div class="card small blue-grey darken-2 white-text">
                         <div class="card-title center">
                             <span class="white-text"><h5><small>{{'stats.resumeTab.sanctions' | translate }}</small></h5></span>
                         </div>
+                        
                         <div class="card-image waves-effect waves-block waves-light">
-                            <img src="/assets/images/handball/ballon-fillet.jpeg">
+                            <img src="/assets/images/handball/sanction.jpeg">
                         </div>
                         
-                        <div class="card-content red lighten-1">
+                        <div class="card-content blue-grey darken-2">
                             <div class="row center">
                                 <div class="col s4"><h6>{{'stats.sanction.yellowCard' | translate }}</h6></div>
                                 <div class="col s4"><h6>{{'stats.sanction.excluTempo' | translate }}</h6></div>
                                 <div class="col s4"><h6>{{'stats.sanction.redCard' | translate }}</h6></div>
-                                <div class="col s4 amber accent-3"><h5>{{stats['yellowCard'].count}}</h5></div>
-                                <div class="col s4 white red-text text-lighten-1"><h5>{{stats['exclTmp'].count}}</h5></div>
-                                <div class="col s4 red darken-3 white-text"><h5>{{stats['redCard'].count}}</h5></div>
+                                <div class="col s4 amber accent-3"><h6>{{stats['yellowCard'].count}}</h6></div>
+                                <div class="col s4 red lighten-2"><h6>{{stats['exclTmp'].count}}</h6></div>
+                                <div class="col s4 red darken-3 white-text"><h6>{{stats['redCard'].count}}</h6></div>
                             </div>
                         </div>
                     </div>        
