Bug fix sur avatar quand il s'agit d'un user

--- a/src/app/modules/commons/users/profile/plan.html
+++ b/src/app/modules/commons/users/profile/plan.html
@@ -1,6 +1,6 @@
 <h5 class="light-green-text text-lighten-1" translate="profile.plan.desc"></h5>
 <div class="col s12 m2 center">
-    <avatar person="user" width="'130px'"></avatar>
+    <avatar person="user" width="'130px'" collection="User"></avatar>
     <h3>{{user.account.login}}</h3>
     </div>
 </div>
