--- a/src/app/modules/commons/users/profile/userinfos.html
+++ b/src/app/modules/commons/users/profile/userinfos.html
@@ -4,7 +4,7 @@
       data-ng-submit="updateUser(profileForm)">
     <div class="row">
         <div class="col s12 m2 center">
-            <avatar person="user" width="'130px'"></avatar>
+            <avatar person="user" width="'130px'" collection="User"></avatar>
             <h5 class="center">{{user.account.login}}</h5>
 
             <div class="btn-toolbar">
