Factorisation Code - Directive Efficiency

--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -74,8 +74,7 @@
                     <li class="collection-item" ng-repeat="team in listTeamHome">
                         <span class="title blue-grey-text text-darken-1">{{team.label}}</span>
                         <a href="#/private/teamStats/{{team._id}}"
-                           class="waves-effect waves-light red lighten-1  white-text right"><i
-                                class="fa fa-bar-chart fa-2x"></i></a>
+                           class="waves-effect waves-light btn-floating red lighten-1  white-text right"><i class="fa fa-bar-chart"></i></a>
                     </li>
                 </ul>
                 <br/>
